# BatMeth2

./: .Rhistory  BatMeth.py  Makefile  Makefile.am  Makefile.in  README.md  README.md~  batmeth2_to_bigwig.py  config.h  config.h.in  config.status  configure  configure.in  map.cpp  methyGff  missing  multirun.conf  penguin-a.cpp  penguin-a2.cpp  penguin-a3.cpp  swroutines.cpp
BatMeth2-Report/: batmeth2.html  doc2html.r  script.js  style.css
BatMeth2-Report/images/: DM.html  Methygenome.html  Paramater.html  Paramater.txt  Paramater2.html  Paramater2.txt  alignresults.html  alignresults.txt  methratio.html  methratio.txt  outfiles.html  outfiles.txt
autom4te.cache/: output.0  output.1  requests  traces.1
scripts/: .build_indexX.un~  BatMeth2  BatMeth2.cpp  BatMeth2.py  GeneMethHeatmap  Makefile  Makefile.am  Makefile.in  TSS.TTS.r  batman.ini  batmap  batmeth  batmeth2-align  batmeth2_to_bigwig.py  batmeth2_to_bigwig_nostrand.py  batmeth2_to_bigwig_withstrand.py  bt2basicplot.py  bt2heatmap.py  bt2profile.py  build_all  build_complement  build_indexX  chrLenExtract.c  chrom_distribution.batmeth2.r  density_plot_with_methyl.r  density_plot_with_methyl_oneSample.r  density_plot_with_methyl_oneSample_oneGff.r  doc2html.r  elements.methylevel.Aver.r  fix_boundary  install.rpackages.r  installRpackage.r  make_Profile_Heatmap.sh  methdoc2html.r  methylevel.elements.compare.r  methylevel.elements.r  preGenome  recover_boundary  report2html  report2html.cpp
src/: .penguin-a.cpp.swn  .penguin.cpp.swo  BWT-l.c  BWT-l.h  BWT-s.c  BWT-s.h  BWT.c  BWT.h  BWTConstruct-l.h  BWTConstruct-s.h  BWTConstruct.c  BWTConstruct.h  BatMeth2  DMCannotation.cpp  DMCannotation.cpp~  DMCannotation.r  DNACount-l.c  DNACount-l.h  DNACount-s.c  DNACount-s.h  DNACount.c  DNACount.h  GeneMethHeatmap  HSP-l.c  HSP-l.h  HSP-s.c  HSP-s.h  HSP.c  HSP.h  HSPstatistic-l.c  HSPstatistic-l.h  HSPstatistic-s.c  HSPstatistic.c  Makefile  Makefile.am  Makefile.in  MemManager-l.c  MemManager-l.h  MemManager-s.c  MemManager-s.h  (+180 more)
src/.deps/: BWT-l.Po  BWT-s.Po  BWT.Po  BWTConstruct.Po  DNACount-l.Po  DNACount-s.Po  DNACount.Po  HSP-l.Po  HSP-s.Po  HSP.Po  HSPstatistic-l.Po  HSPstatistic-s.Po  HSPstatistic.Po  MemManager-l.Po  MemManager-s.Po  MemManager.Po  MiscUtilities-l.Po  MiscUtilities-s.Po  MiscUtilities.Po  QSufSort-l.Po  QSufSort-s.Po  QSufSort.Po  Socket-l.Po  Socket-s.Po  Socket.Po  TextConverter-l.Po  TextConverter-s.Po  TextConverter.Po  Timing-l.Po  Timing-s.Po  Timing.Po  adler32.Po  batlib-l.Po  batlib-s.Po  batlib.Po  batmeth.Po  bfix.Po  build_index_rrbs.Po  bwtformatdb.Po  command-l.Po  (+60 more)
src/BS-Snper/: BS-Snper.sh  Makefile  bamTest.c  chrLenExtract.c  chrome_funcs.c  chrome_funcs.h  filterCG_SNP.pl  hash_funcs.c  hash_funcs.h  main.c  sam_funcs.c  sam_funcs.h
src/BS-Snper/samtools-0.1.19/: samtools
src/BS-Snper/samtools-0.1.19/bcftools/: bcftools
src/BS-Snper/samtools-0.1.19/misc/: ace2sam  bamcheck  maq2sam-long  maq2sam-short  md5fa  md5sum-lite  wgsim
src/BS-Snper/test/: snp_result_file
src/batDMR/: .batDMR.cpp.swp  .regression.cpp.un~  GenomicRegion.cpp  GenomicRegion.hpp  Makefile  MethpipeFiles.cpp  MethpipeSite.cpp  batDMR  batDMR.cpp  combine_pvals.cpp  combine_pvals.hpp  merge.cpp  regression.cpp  regression.hpp
src/mealign/: Makefile  bwa.c  bwame  bwamem.c  bwamem.h  bwtindex.c  fastmap.c
src/samtools-0.1.18/: Makefile  bam_import_rmfrinchrom.c  samtools
src/samtools-0.1.18/bcftools/: bcftools
src/samtools-0.1.18/misc/: maq2sam-long  maq2sam-short  md5fa  md5sum-lite  seqtk  wgsim
